# sunbot

./: .gitignore  README.md  pyproject.toml  sunbot.conf.sample  sunbot.py  sunbot.service
.github/workflows/: flake8.yml  pylint.yml
src/sunbot/: __init__.py  __main__.py  _sunbot.py  help.yaml
