[build-system]
  requires = ["setuptools"]
  build-backend = "setuptools.build_meta"

[project]
  name = "sunbot"
  readme = "README.md"
  description = "Sun activity and propagation bot for telegram."
  license = {file = "LICENSE.md"}
  authors = [
    { name = "Fred C." },
  ]
  classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Telecommunications",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
  ]
  requires-python = ">=3.10"
  dependencies = [
    "aiofiles",
    "python-telegram-bot >= 20",
    "PyYAML",
  ]
  dynamic = ["version"]


[project.urls]
  Documentation = "https://github.com/0x9900/sunbot/"
  Source = "https://github.com/0x9900/sunbot"
  Tracker = "https://github.com/0x9900/sunbot/issues"

[project.scripts]
  sunbot = "sunbot._sunbot:main"

[tool.setuptools.dynamic]
  version = { attr = "sunbot.__version__" }

[tool.setuptools.packages.find]
  where = ["src"]

[tool.setuptools.package-data]
  "sunbot" = ["help.yaml"]
